--- a/win.html
+++ b/win.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Congrats!!! 🥳</title>
     <link rel="stylesheet" href="style.css">
-    <title>Guess It</title>
 </head>
-
 <body>
     <div class="container">
-        <div class="logo">Guess The Number</div>
-        <div class="button" id="start">Start</div>
-    </div>        
+        <h1>Congrats!!! you have won the game 🥳 </h1>
+        <div class="button" id="Reset">Play again</div>
+    </div>
+    <script src="./reset.js"></script>
 </body>
-<script src="./app.js"></script>
 </html>
