--- a/lose.html
+++ b/lose.html
@@ -10,8 +10,9 @@
 <body>
     <div class="container">
         <h1>Oops! you have lost the game </h1>
+        <img src="https://i1.faceprep.in/ProGrad/gameover-emoji.png" alt="game-over">
         <div class="button" id="Reset">Play again</div>
     </div>
-    <script src="./reset"></script>
+    <script src="./reset.js"></script>
 </body>
 </html>
