--- a/win.html
+++ b/win.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Congrats!!! you have won the game 🥳 </h1>
+        <img src="https://i1.faceprep.in/ProGrad/congrats-emoji.png" alt="Congrats">
         <div class="button" id="Reset">Play again</div>
     </div>
     <script src="./reset.js"></script>
